--- a/Lab02Cammarano/ee201l_number_lock_sch/ee201l_number_lock_top_summary.html
+++ b/Lab02Cammarano/ee201l_number_lock_sch/ee201l_number_lock_top_summary.html
@@ -25,30 +25,30 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 13.2</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\_xmsgs/*.xmsgs?&DataKey=Warning'>3 Warnings (3 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\_xmsgs/*.xmsgs?&DataKey=Warning'>3 Warnings (3 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top_envsettings.html'>
+<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -197,7 +197,7 @@ System Settings</A>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>33</TD>
 <TD ALIGN=RIGHT>232</TD>
 <TD ALIGN=RIGHT>14%</TD>
@@ -363,18 +363,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -385,21 +385,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:02:56 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\_xmsgs/xst.xmsgs?&DataKey=Warning'>3 Warnings (3 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\_xmsgs/xst.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:14 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:20 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:27 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:02:56 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\_xmsgs/xst.xmsgs?&DataKey=Warning'>3 Warnings (3 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\_xmsgs/xst.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:14 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:20 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:27 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:31 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\_xmsgs/trce.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\ee201l_number_lock_top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:04:54 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:03:31 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\_xmsgs/trce.xmsgs?&DataKey=Info'>2 Infos (2 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\ee201l_number_lock_top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri Jan 31 15:04:54 2014</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jan 31 15:04:54 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02(Cammarano)/ee201l_number_lock_sch\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jan 31 15:04:58 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jan 31 15:04:54 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab02Cammarano/ee201l_number_lock_sch\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Jan 31 15:04:58 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 02/07/2014 - 10:32:42</center>
+<br><center><b>Date Generated:</b> 02/07/2014 - 13:50:35</center>
 </BODY></HTML>
