--- a/Lab08Cammarano/ee201_gcd_testbench/ee201_debounce_DPB_SCEN_CCEN_MCEN_tb_summary.html
+++ b/Lab08Cammarano/ee201_gcd_testbench/ee201_debounce_DPB_SCEN_CCEN_MCEN_tb_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>ee201_gcd_testbench.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/Xilinx_projects/EE201L-Labs/Lab08Cammarano/ee201_gcd_testbench\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>3 Errors</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/14/2014 - 14:13:06</center>
+<br><center><b>Date Generated:</b> 03/16/2014 - 10:16:53</center>
 </BODY></HTML>
