Fixed Divide by 7 again...

--- a/Lab09Cammarano/ee201l_merge_arrays/merge_arrays_mcu_top_summary.html
+++ b/Lab09Cammarano/ee201l_merge_arrays/merge_arrays_mcu_top_summary.html
@@ -2,16 +2,16 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>make_A_close_to_B Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>merge_arrays_mcu_top Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>HW6aVerilog.xise</TD>
+<TD>ee201l_merge_arrays.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 <TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>make_A_close_to_B</TD>
+<TD>merge_arrays_mcu_top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>New</TD>
 </TR>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/25/2014 - 20:30:20</center>
+<br><center><b>Date Generated:</b> 03/25/2014 - 20:54:40</center>
 </BODY></HTML>
