--- a/binary_game/game_top_summary.html
+++ b/binary_game/game_top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ee201_GCD_top Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>game_top Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>binary_game.xise</TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/19/2014 - 04:47:51</center>
+<br><center><b>Date Generated:</b> 04/19/2014 - 04:55:55</center>
 </BODY></HTML>
